--- a/covid/assets/style/contact.scss
+++ b/covid/assets/style/contact.scss
@@ -999,6 +999,8 @@ $color-text: #000;
             text-align: center;
             flex-basis: 100%;
             padding-left: 0;
+            margin: 0 auto;
+            max-width: 300px;
 
             .stop-waiting__title {
                 margin-top: 5px;
