--- a/covid/assets/style/foreclasure.scss
+++ b/covid/assets/style/foreclasure.scss
@@ -1,3 +1,7 @@
+
+html {
+    scroll-behavior: smooth;
+}
 $color-text: #000;
 
 * {
@@ -230,22 +234,41 @@ $color-text: #000;
             text-transform: capitalize;
         }
     }
+    .form-list-arrow {
+        position: relative;
+        &::after {
+            content: "";
+            display: block;
+            top: 20px;
+            right: 20px;
+            width: 21px;
+            height: 12px;
+            background:url('../icon/arrow-list.svg') no-repeat;
+            position: absolute;
+        }
+       
+        
+    }
 
     .form__list {
         background: #FFFFFF;
-        border: 2px solid #FFFFFF;
         box-sizing: border-box;
         border-radius: 10px;
-        border: none;
-        padding: 16px 12px 12px;
+        border: none !important;
+        padding: 16px 12px 12px !important;
         font-style: normal;
         font-weight: 500;
         font-size: 20px;
         line-height: 24px;
         color: rgba(129, 129, 129, 0.7);
         position: relative;
-
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        width: 100%;
         
+
+       
     }
 
     .form-consultation__button {
@@ -727,6 +750,8 @@ $color-text: #000;
                 font-size: 16px;
             }
         }
+
+        
 
 
         .form-consultation__button {
