--- a/covid/assets/style/shortSale.scss
+++ b/covid/assets/style/shortSale.scss
@@ -681,6 +681,11 @@ html {
     .foreclosure-preview {
         .message {
             margin-top: 10px;
+            font-size: 16px;
+
+            &::placeholder {
+                font-size: 16px;
+            }
         }
         .foreclosure-preview__description {
             flex-basis: 48%;
@@ -724,6 +729,10 @@ html {
             &::placeholder {
                 font-size: 16px;
             }
+        }
+
+        .message {
+            font-size: 16px;
         }
 
 
@@ -986,6 +995,7 @@ html {
                     font-size: 16px;
                     padding: 10px 20px
                 }
+                
             }
             
         }
