--- a/covid/assets/style/login.css
+++ b/covid/assets/style/login.css
@@ -225,9 +225,10 @@ html {
 }
 .footer .footer__menu form {
   display: flex;
-  align-items: flex-end;
+  align-items: flex-start;
 }
 .footer .footer__menu form input {
+  min-width: 329px;
   background: rgba(255, 252, 252, 0.7);
   border: 1px solid #000000;
   box-sizing: border-box;
@@ -570,5 +571,9 @@ html {
 
   .footer .footer__menu .powered::after {
     height: 30px;
+  }
+
+  .footer .footer__menu form input {
+    min-width: 10px;
   }
 }
