--- a/covid/assets/style/about.scss
+++ b/covid/assets/style/about.scss
@@ -333,6 +333,21 @@ $color-text: #000;
             text-transform: capitalize;
         }
     }
+    .form-list-arrow {
+        position: relative;
+        &::after {
+            content: "";
+            display: block;
+            top: 20px;
+            right: 20px;
+            width: 21px;
+            height: 12px;
+            background:url('../icon/arrow-list.svg') no-repeat;
+            position: absolute;
+        }
+       
+        
+    }
 
     .form__list {
         background: #FFFFFF;
@@ -346,6 +361,10 @@ $color-text: #000;
         font-size: 20px;
         line-height: 24px;
         color: rgba(129, 129, 129, 0.7);
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        width: 100%;
     }
 
     .form-consultation__button {
@@ -404,9 +423,10 @@ $color-text: #000;
 
         form {
             display: flex;
-            align-items: flex-end;
+            align-items: flex-start;
 
             input {
+                min-width: 329px;
                 background: rgba(255, 252, 252, 0.7);
                 border: 1px solid #000000;
                 box-sizing: border-box;
@@ -939,5 +959,8 @@ $color-text: #000;
 
     .footer .footer__menu .powered::after {
         height: 30px;
+    }
+    .footer .footer__menu form input {
+        min-width: 10px;
     }
 }
