--- a/covid/assets/style/contact.css
+++ b/covid/assets/style/contact.css
@@ -221,6 +221,19 @@
   color: rgba(129, 129, 129, 0.7);
   text-transform: capitalize;
 }
+.contact-preview .form-list-arrow {
+  position: relative;
+}
+.contact-preview .form-list-arrow::after {
+  content: "";
+  display: block;
+  top: 20px;
+  right: 20px;
+  width: 21px;
+  height: 12px;
+  background: url("../icon/arrow-list.svg") no-repeat;
+  position: absolute;
+}
 .contact-preview .form__list {
   background: #FFFFFF;
   border: 2px solid #FFFFFF;
@@ -233,6 +246,10 @@
   font-size: 20px;
   line-height: 24px;
   color: rgba(129, 129, 129, 0.7);
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 100%;
 }
 .contact-preview .form-consultation__button {
   background: #76ECC1;
@@ -386,6 +403,10 @@
   line-height: 24px;
   text-transform: uppercase;
   color: rgba(129, 129, 129, 0.7);
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 100%;
 }
 .map .map__content .map__form .message {
   background: #FFFFFF;
@@ -455,7 +476,7 @@
 }
 .footer .footer__menu form {
   display: flex;
-  align-items: flex-end;
+  align-items: flex-start;
 }
 .footer .footer__menu form input {
   background: rgba(255, 252, 252, 0.7);
@@ -467,6 +488,7 @@
   font-size: 20px;
   line-height: 24px;
   padding: 12px 16px;
+  min-width: 329px;
   color: #585858;
 }
 .footer .footer__menu form input::placeholder {
@@ -981,5 +1003,9 @@
 
   .footer .footer__menu .powered::after {
     height: 30px;
+  }
+
+  .footer .footer__menu form input {
+    min-width: 10px;
   }
 }
