--- a/covid/assets/style/contact.scss
+++ b/covid/assets/style/contact.scss
@@ -244,6 +244,19 @@ $color-text: #000;
             text-transform: capitalize;
         }
     }
+    .form-list-arrow {
+        position: relative;
+        &::after {
+            content: "";
+            display: block;
+            top: 20px;
+            right: 20px;
+            width: 21px;
+            height: 12px;
+            background:url('../icon/arrow-list.svg') no-repeat;
+            position: absolute;
+        }
+    }
 
     .form__list {
         background: #FFFFFF;
@@ -257,6 +270,11 @@ $color-text: #000;
         font-size: 20px;
         line-height: 24px;
         color: rgba(129, 129, 129, 0.7);
+
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        width: 100%;
     }
 
     .form-consultation__button {
@@ -417,6 +435,8 @@ $color-text: #000;
                 }
             }
 
+            
+
             .form__list {
                 background: #FFFFFF;
                 border: 2px solid #868686;
@@ -430,6 +450,10 @@ $color-text: #000;
                 line-height: 24px;
                 text-transform: uppercase;
                 color: rgba(129, 129, 129, 0.7);
+                -webkit-appearance: none;
+                -moz-appearance: none;
+                appearance: none;
+                width: 100%;
             }
             .message {
                 background: #FFFFFF;
@@ -509,7 +533,7 @@ $color-text: #000;
 
         form {
             display: flex;
-            align-items: flex-end;
+            align-items: flex-start;
 
             input {
                 background: rgba(255, 252, 252, 0.7);
@@ -521,6 +545,7 @@ $color-text: #000;
                 font-size: 20px;
                 line-height: 24px;
                 padding: 12px 16px;
+                min-width: 329px;
                 color: rgba(88, 88, 88, 1);
                 &::placeholder {
                     font-style: normal;
@@ -1141,6 +1166,9 @@ $color-text: #000;
 
     .footer .footer__menu .powered::after {
         height: 30px;
+    }
+    .footer .footer__menu form input {
+        min-width: 10px;
     }
 }
 
