--- a/covid/assets/style/foreclasure.css
+++ b/covid/assets/style/foreclasure.css
@@ -518,7 +518,7 @@ html {
 }
 .footer .footer__menu form {
   display: flex;
-  align-items: flex-end;
+  align-items: flex-start;
 }
 .footer .footer__menu form input {
   background: rgba(255, 252, 252, 0.7);
@@ -530,6 +530,7 @@ html {
   font-size: 20px;
   line-height: 24px;
   padding: 12px 16px;
+  min-width: 329px;
   color: #585858;
 }
 .footer .footer__menu form input::placeholder {
@@ -1019,5 +1020,9 @@ html {
 
   .footer .footer__menu .powered::after {
     height: 30px;
+  }
+
+  .footer .footer__menu form input {
+    min-width: 10px;
   }
 }
