--- a/covid/assets/style/index.css
+++ b/covid/assets/style/index.css
@@ -382,7 +382,7 @@ html {
 }
 .footer .footer__menu form {
   display: flex;
-  align-items: flex-end;
+  align-items: flex-start;
 }
 .footer .footer__menu form input {
   background: rgba(255, 252, 252, 0.7);
@@ -391,6 +391,7 @@ html {
   border-radius: 10px;
   font-style: normal;
   font-weight: 500;
+  min-width: 329px;
   font-size: 20px;
   line-height: 24px;
   padding: 12px 16px;
@@ -871,5 +872,9 @@ html {
 
   .footer .footer__menu .powered::after {
     height: 30px;
+  }
+
+  .footer .footer__menu form input {
+    min-width: 10px;
   }
 }
