--- a/covid/assets/style/index.scss
+++ b/covid/assets/style/index.scss
@@ -419,7 +419,7 @@ html {
 
         form {
             display: flex;
-            align-items: flex-end;
+            align-items: flex-start;
 
             input {
                 background: rgba(255, 252, 252, 0.7);
@@ -428,6 +428,7 @@ html {
                 border-radius: 10px;
                 font-style: normal;
                 font-weight: 500;
+                min-width: 329px;
                 font-size: 20px;
                 line-height: 24px;
                 padding: 12px 16px;
@@ -1011,5 +1012,8 @@ html {
 
     .footer .footer__menu .powered::after {
         height: 30px;
+    }
+    .footer .footer__menu form input {
+        min-width: 10px;
     }
 }
