--- a/covid/assets/style/probate.scss
+++ b/covid/assets/style/probate.scss
@@ -230,8 +230,24 @@ $color-text: #000;
             text-transform: capitalize;
         }
     }
+    .form-list-arrow {
+        position: relative;
+        &::after {
+            content: "";
+            display: block;
+            top: 20px;
+            right: 20px;
+            width: 21px;
+            height: 12px;
+            background:url('../icon/arrow-list.svg') no-repeat;
+            position: absolute;
+        }
+       
+        
+    }
 
     .form__list {
+        width: 100%;
         background: #FFFFFF;
         border: 2px solid #FFFFFF;
         box-sizing: border-box;
@@ -244,7 +260,9 @@ $color-text: #000;
         line-height: 24px;
         color: rgba(129, 129, 129, 0.7);
         position: relative;
-
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
         
     }
 
@@ -552,7 +570,7 @@ $color-text: #000;
 
         form {
             display: flex;
-            align-items: flex-end;
+            align-items: flex-start;
 
             input {
                 background: rgba(255, 252, 252, 0.7);
@@ -564,6 +582,7 @@ $color-text: #000;
                 font-size: 20px;
                 line-height: 24px;
                 padding: 12px 16px;
+                min-width: 329px;
                 color: rgba(88, 88, 88, 1);
                 &::placeholder {
                     font-style: normal;
@@ -1162,5 +1181,8 @@ $color-text: #000;
 
     .footer .footer__menu .powered::after {
         height: 30px;
+    }
+    .footer .footer__menu form input {
+        min-width: 10px;
     }
 }
