--- a/covid/assets/style/shortSale.css
+++ b/covid/assets/style/shortSale.css
@@ -232,6 +232,23 @@ html {
   line-height: 24px;
   color: rgba(129, 129, 129, 0.7);
   position: relative;
+  width: 100%;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+.foreclosure-preview .form-list-arrow {
+  position: relative;
+}
+.foreclosure-preview .form-list-arrow::after {
+  content: "";
+  display: block;
+  top: 20px;
+  right: 20px;
+  width: 21px;
+  height: 12px;
+  background: url("../icon/arrow-list.svg") no-repeat;
+  position: absolute;
 }
 .foreclosure-preview .form-consultation__button {
   background: #76ECC1;
@@ -394,7 +411,7 @@ html {
   padding: 45px 30px;
   border: 2px solid #4C957A;
   position: relative;
-  min-height: 600px;
+  min-height: 634px;
 }
 .how-it-works .step__content .step__title {
   font-weight: bold;
@@ -491,7 +508,7 @@ html {
 }
 .footer .footer__menu form {
   display: flex;
-  align-items: flex-end;
+  align-items: flex-start;
 }
 .footer .footer__menu form input {
   background: rgba(255, 252, 252, 0.7);
@@ -504,6 +521,7 @@ html {
   line-height: 24px;
   padding: 12px 16px;
   color: #585858;
+  min-width: 329px;
 }
 .footer .footer__menu form input::placeholder {
   font-style: normal;
@@ -1017,5 +1035,9 @@ html {
 
   .footer .footer__menu .powered::after {
     height: 30px;
+  }
+
+  .footer .footer__menu form input {
+    min-width: 10px;
   }
 }
