--- a/covid/assets/style/shortSale.scss
+++ b/covid/assets/style/shortSale.scss
@@ -255,7 +255,26 @@ html {
         line-height: 24px;
         color: rgba(129, 129, 129, 0.7);
         position: relative;
+        width: 100%;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
 
+        
+    }
+    .form-list-arrow {
+        position: relative;
+        &::after {
+            content: "";
+            display: block;
+            top: 20px;
+            right: 20px;
+            width: 21px;
+            height: 12px;
+            background:url('../icon/arrow-list.svg') no-repeat;
+            position: absolute;
+        }
+       
         
     }
 
@@ -438,7 +457,7 @@ html {
         padding: 45px 30px;
         border: 2px solid #4C957A;
         position: relative;
-        min-height: 600px;
+        min-height: 634px;
 
         .step__title {
             font-weight: bold;
@@ -542,7 +561,7 @@ html {
 
         form {
             display: flex;
-            align-items: flex-end;
+            align-items: flex-start;
 
             input {
                 background: rgba(255, 252, 252, 0.7);
@@ -555,6 +574,7 @@ html {
                 line-height: 24px;
                 padding: 12px 16px;
                 color: rgba(88, 88, 88, 1);
+                min-width: 329px;
                 &::placeholder {
                     font-style: normal;
                     font-weight: 500;
@@ -730,6 +750,7 @@ html {
                 font-size: 16px;
             }
         }
+        
 
         .message {
             font-size: 16px;
@@ -1176,5 +1197,8 @@ html {
 
     .footer .footer__menu .powered::after {
         height: 30px;
+    }
+    .footer .footer__menu form input {
+        min-width: 10px;
     }
 }
