--- a/covid/assets/style/about.scss
+++ b/covid/assets/style/about.scss
@@ -60,7 +60,7 @@ $color-text: #000;
             position: absolute;
             width: 40px;
             right: 0;
-            height: 4px;
+            height: 2px;
             background-color: #4C957A;
             transition: 0.5s ease-in-out;
         }
@@ -191,6 +191,11 @@ $color-text: #000;
         color: #fff;
         cursor: pointer;
         margin-top: 15px;
+        transition: .3s;
+
+        &:hover {
+            background: #4C957A;
+        }
     }
 
 }
@@ -271,6 +276,12 @@ $color-text: #000;
         padding: 21px 51px;
         background: #6CD3AE;
         border-radius: 10px;
+        cursor: pointer;
+        transition: .3s;
+
+        &:hover {
+            background: #4C957A;
+        }
     }
 
 
@@ -386,6 +397,23 @@ $color-text: #000;
 .footer {
     padding: 20px 0;
 
+    .logo {
+        max-width: 134px;
+    }
+    .block-logo{
+        margin-top: 18px;
+        display: flex;
+        flex-direction: column;
+        text-decoration: none;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 17px;
+        /* identical to box height */
+
+
+color: #000000;
+    }
     .footer__register {
         display: flex;
         justify-content: space-between;
@@ -422,43 +450,63 @@ $color-text: #000;
         padding-top: 34px;
 
         form {
-            display: flex;
-            align-items: flex-start;
+            position: relative;
+            .join-title {
+                font-style: normal;
+                font-weight: bold;
+                font-size: 14px;
+                line-height: 17px;
+
+                color: #000000;
+            }
+
+            & > div {
+                position: relative;
+                top: 50%;
+                transform: translateY(-50%);
+            }
 
             input {
-                min-width: 329px;
+                -webkit-appearance: none;
+                -moz-appearance: none;
+                appearance: none;
                 background: rgba(255, 252, 252, 0.7);
                 border: 1px solid #000000;
                 box-sizing: border-box;
                 border-radius: 10px;
                 font-style: normal;
                 font-weight: 500;
-                font-size: 20px;
+                min-width: 329px;
+                font-size: 14px;
                 line-height: 24px;
                 padding: 12px 16px;
                 color: rgba(88, 88, 88, 1);
                 &::placeholder {
                     font-style: normal;
                     font-weight: 500;
-                    font-size: 20px;
+                    font-size: 14px;
                     line-height: 24px;
                     color: rgba(88, 88, 88, 0.7);
                 }
             }
 
             button {
+                -webkit-appearance: none;
+                -moz-appearance: none;
+                appearance: none;
                 background: #6CD3AE;
                 border-radius: 10px;
                 border: none;
                 font-style: normal;
                 font-weight: 500;
-                font-size: 48px;
+                font-size: 14px;
                 line-height: 48px;
                 color: #FFFFFF;
                 margin-left: 7px;
-                padding: 2px 10px;
+                padding: 0px 22px;
                 cursor: pointer;
-                transition: .3s;;
+                transition: .3s;
+                text-transform: uppercase;
 
                 &:hover {
                     background: #4C957A;
@@ -475,7 +523,7 @@ $color-text: #000;
                 margin-bottom: 15px;
                 font-style: normal;
                 font-weight: bold;
-                font-size: 20px;
+                font-size: 14px;
                 line-height: 24px;
                 color: #000000;
             }
@@ -483,7 +531,7 @@ $color-text: #000;
             a,p {
                 font-style: normal;
                 font-weight: 500;
-                font-size: 20px;
+                font-size: 14px;
                 line-height: 24px;
                 color: #000000;
             }
@@ -502,6 +550,12 @@ $color-text: #000;
             width: 131px;
             display: flex;
             justify-content: space-between;
+            position: relative;
+            & > a {
+                position: relative;
+                top: 50%;
+                height: 36px;
+            }
         }
 
         .powered {
@@ -532,10 +586,12 @@ $color-text: #000;
 }
 
 
-@media (min-width: 768px) and (max-width: 1439px) {
-
+@media (min-width: 768px) and (max-width: 1280px) {
+    .about-preview {
+        padding-top: 80px;
+    }
     .logo {
-        max-width: 105px;
+        max-width: 80px;
     }
     .header .header__navigation .navigation__list .list__link {
         font-size: 12px;
@@ -548,16 +604,15 @@ $color-text: #000;
 
     .header .header__content > div {
         display: flex;
-        flex-direction: column;
         align-items: flex-end;
 
-        .button-sing-in {
-            order: 1;
+        .button-sing-in img{
+            max-width: 23px;
         }
 
         .header__navigation{
-            order: 2;
-            margin-right: 0;
+            
+            margin-right: 10px;
         }
     }
 
@@ -693,7 +748,7 @@ $color-text: #000;
         .footer__register{
             padding-bottom: 30px;
             .input__join {
-                font-size: 16px;
+                font-size: 14px;
                 padding: 13px;
                 &::placeholder {
                     font-size: 16px;
@@ -707,16 +762,22 @@ $color-text: #000;
             justify-content: space-around;
 
             .block-menu {
-                flex-basis: 22%;
+                flex-basis: 30%;
                 text-align: center;
             }
 
-            .contact-us,.social {
-                margin-top: 30px;
-            }
+            
 
             form {
+                margin-left: 0;
                 align-items: flex-start;
+                margin-top: 20px;
+            }
+
+            .social {
+                margin-right: auto;
+                margin-top: 20px;
+                margin-left: 20px;
             }
         }
     }
@@ -775,9 +836,9 @@ $color-text: #000;
 
             .button-sing-in {
                 position: absolute;
-
-                right: 55%;
-                top: 3%;
+                bottom: 24%;
+                transform: translateX(50%);
+                right: 38%;
             }
         }
 
@@ -899,6 +960,9 @@ $color-text: #000;
 
     .footer {
         padding: 30px 0;
+        
+
+        
         .social {
             order: 4;
         }
@@ -906,9 +970,6 @@ $color-text: #000;
         .footer__menu {
             flex-direction: column;
             align-items: center;
-            .logo {
-                order:1;
-            }
             .block-menu {
                 order: 3;
                 text-align: center;
@@ -928,8 +989,20 @@ $color-text: #000;
                 width: 90%;
                 align-items: flex-start;
                 margin-top: 20px;
+
+                h5 {
+                    text-align: center;
+                }
+
+                & > div {
+                    text-align: center;
+                    top: 0;
+                    transform: none;
+                    margin-top: 10px;
+                    margin-bottom: 10px;
+                }
                 input {
-                    width: 90%;
+                    width: 68%;
                     padding: 5px;
                     font-size: 12px;
                     &::placeholder {
@@ -943,9 +1016,6 @@ $color-text: #000;
                 }
             }
         }
-
-
-        
     }
 
     .footer .footer__menu .powered {
