--- a/covid/assets/style/contact.scss
+++ b/covid/assets/style/contact.scss
@@ -18,6 +18,7 @@ $color-text: #000;
     box-sizing: border-box;
 }
 
+
 .header {
     background: #fff;
     padding-top: 7px;
@@ -60,7 +61,7 @@ $color-text: #000;
             position: absolute;
             width: 40px;
             right: 0;
-            height: 4px;
+            height: 2px;
             background-color: #4C957A;
             transition: 0.5s ease-in-out;
         }
@@ -183,6 +184,10 @@ $color-text: #000;
         color: #fff;
         cursor: pointer;
         margin-top: 30px;
+        transition: .3s;
+        &:hover {
+            background: #4C957A;
+        }
     } 
 
     .contact-preview__form-consultation {
@@ -289,6 +294,11 @@ $color-text: #000;
         font-size: 20px;
         line-height: 24px;
         color: #FFFFFF;
+        transition: .3s;
+        cursor: pointer;
+        &:hover {
+            background: #4C957A;
+        }
 
     }
 }
@@ -394,6 +404,10 @@ $color-text: #000;
             border: none;
             padding: 21px 41px;
             cursor: pointer;
+            transition: .3s;
+            &:hover {
+                background: #4C957A;
+            }
         }
     }
 }
@@ -485,6 +499,10 @@ $color-text: #000;
                 background: #6CD3AE;
                 border-radius: 10px;
                 cursor: pointer;
+                transition: .3s;
+                &:hover {
+                    background: #4C957A;
+                }
 
             }
         }
@@ -496,6 +514,23 @@ $color-text: #000;
 .footer {
     padding: 20px 0;
 
+    .logo {
+        max-width: 134px;
+    }
+    .block-logo{
+        margin-top: 18px;
+        display: flex;
+        flex-direction: column;
+        text-decoration: none;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 17px;
+        /* identical to box height */
+
+
+color: #000000;
+    }
     .footer__register {
         display: flex;
         justify-content: space-between;
@@ -532,43 +567,63 @@ $color-text: #000;
         padding-top: 34px;
 
         form {
-            display: flex;
-            align-items: flex-start;
+            position: relative;
+            .join-title {
+                font-style: normal;
+                font-weight: bold;
+                font-size: 14px;
+                line-height: 17px;
+
+                color: #000000;
+            }
+
+            & > div {
+                position: relative;
+                top: 50%;
+                transform: translateY(-50%);
+            }
 
             input {
+                -webkit-appearance: none;
+                -moz-appearance: none;
+                appearance: none;
                 background: rgba(255, 252, 252, 0.7);
                 border: 1px solid #000000;
                 box-sizing: border-box;
                 border-radius: 10px;
                 font-style: normal;
                 font-weight: 500;
-                font-size: 20px;
+                min-width: 329px;
+                font-size: 14px;
                 line-height: 24px;
                 padding: 12px 16px;
-                min-width: 329px;
                 color: rgba(88, 88, 88, 1);
                 &::placeholder {
                     font-style: normal;
                     font-weight: 500;
-                    font-size: 20px;
+                    font-size: 14px;
                     line-height: 24px;
                     color: rgba(88, 88, 88, 0.7);
                 }
             }
 
             button {
+                -webkit-appearance: none;
+                -moz-appearance: none;
+                appearance: none;
                 background: #6CD3AE;
                 border-radius: 10px;
                 border: none;
                 font-style: normal;
                 font-weight: 500;
-                font-size: 48px;
+                font-size: 14px;
                 line-height: 48px;
                 color: #FFFFFF;
                 margin-left: 7px;
-                padding: 2px 10px;
+                padding: 0px 22px;
                 cursor: pointer;
-                transition: .3s;;
+                transition: .3s;
+                text-transform: uppercase;
 
                 &:hover {
                     background: #4C957A;
@@ -585,7 +640,7 @@ $color-text: #000;
                 margin-bottom: 15px;
                 font-style: normal;
                 font-weight: bold;
-                font-size: 20px;
+                font-size: 14px;
                 line-height: 24px;
                 color: #000000;
             }
@@ -593,7 +648,7 @@ $color-text: #000;
             a,p {
                 font-style: normal;
                 font-weight: 500;
-                font-size: 20px;
+                font-size: 14px;
                 line-height: 24px;
                 color: #000000;
             }
@@ -612,6 +667,12 @@ $color-text: #000;
             width: 131px;
             display: flex;
             justify-content: space-between;
+            position: relative;
+            & > a {
+                position: relative;
+                top: 50%;
+                height: 36px;
+            }
         }
 
         .powered {
@@ -642,7 +703,7 @@ $color-text: #000;
 }
 
 
-@media (min-width: 768px) and (max-width: 1439px) {
+@media (min-width: 768px) and (max-width: 1280px) {
 
     .logo {
         max-width: 105px;
@@ -658,16 +719,15 @@ $color-text: #000;
 
     .header .header__content > div {
         display: flex;
-        flex-direction: column;
         align-items: flex-end;
 
-        .button-sing-in {
-            order: 1;
+        .button-sing-in img{
+            max-width: 23px;
         }
 
         .header__navigation{
-            order: 2;
-            margin-right: 0;
+            
+            margin-right: 10px;
         }
     }
 
@@ -800,7 +860,7 @@ $color-text: #000;
         .footer__register{
             padding-bottom: 30px;
             .input__join {
-                font-size: 16px;
+                font-size: 14px;
                 padding: 13px;
                 &::placeholder {
                     font-size: 16px;
@@ -814,16 +874,22 @@ $color-text: #000;
             justify-content: space-around;
 
             .block-menu {
-                flex-basis: 22%;
+                flex-basis: 30%;
                 text-align: center;
             }
 
-            .contact-us,.social {
-                margin-top: 30px;
-            }
+            
 
             form {
+                margin-left: 0;
                 align-items: flex-start;
+                margin-top: 20px;
+            }
+
+            .social {
+                margin-right: auto;
+                margin-left: 20px;
+                margin-top: 20px;
             }
         }
     }
@@ -883,9 +949,9 @@ $color-text: #000;
 
             .button-sing-in {
                 position: absolute;
-
-                right: 55%;
-                top: 3%;
+                bottom: 24%;
+                transform: translateX(50%);
+                right: 38%;
             }
         }
 
@@ -926,7 +992,7 @@ $color-text: #000;
     }
 
     .contact-preview {
-        padding-top: 86px;
+        padding-top: 80px;
         
         height: auto;
         .contact-preview__text {
@@ -1113,9 +1179,6 @@ $color-text: #000;
         .footer__menu {
             flex-direction: column;
             align-items: center;
-            .logo {
-                order:1;
-            }
             .block-menu {
                 order: 3;
                 text-align: center;
@@ -1135,8 +1198,20 @@ $color-text: #000;
                 width: 90%;
                 align-items: flex-start;
                 margin-top: 20px;
+
+                h5 {
+                    text-align: center;
+                }
+
+                & > div {
+                    text-align: center;
+                    top: 0;
+                    transform: none;
+                    margin-top: 10px;
+                    margin-bottom: 10px;
+                }
                 input {
-                    width: 90%;
+                    width: 68%;
                     padding: 5px;
                     font-size: 12px;
                     &::placeholder {
@@ -1150,9 +1225,6 @@ $color-text: #000;
                 }
             }
         }
-
-
-        
     }
 
     .footer .footer__menu .powered {
