--- a/covid/assets/style/index.css
+++ b/covid/assets/style/index.css
@@ -61,7 +61,7 @@ html {
   position: absolute;
   width: 40px;
   right: 0;
-  height: 4px;
+  height: 2px;
   background-color: #4C957A;
   transition: 0.5s ease-in-out;
 }
@@ -347,6 +347,21 @@ html {
 .footer {
   padding: 20px 0;
 }
+.footer .logo {
+  max-width: 134px;
+}
+.footer .block-logo {
+  margin-top: 18px;
+  display: flex;
+  flex-direction: column;
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  /* identical to box height */
+  color: #000000;
+}
 .footer .footer__register {
   display: flex;
   justify-content: space-between;
@@ -381,10 +396,24 @@ html {
   padding-top: 34px;
 }
 .footer .footer__menu form {
-  display: flex;
-  align-items: flex-start;
+  position: relative;
+}
+.footer .footer__menu form .join-title {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 17px;
+  color: #000000;
+}
+.footer .footer__menu form > div {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
 .footer .footer__menu form input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   background: rgba(255, 252, 252, 0.7);
   border: 1px solid #000000;
   box-sizing: border-box;
@@ -392,7 +421,7 @@ html {
   font-style: normal;
   font-weight: 500;
   min-width: 329px;
-  font-size: 20px;
+  font-size: 14px;
   line-height: 24px;
   padding: 12px 16px;
   color: #585858;
@@ -400,23 +429,27 @@ html {
 .footer .footer__menu form input::placeholder {
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 14px;
   line-height: 24px;
   color: rgba(88, 88, 88, 0.7);
 }
 .footer .footer__menu form button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   background: #6CD3AE;
   border-radius: 10px;
   border: none;
   font-style: normal;
   font-weight: 500;
-  font-size: 48px;
+  font-size: 14px;
   line-height: 48px;
   color: #FFFFFF;
   margin-left: 7px;
-  padding: 2px 10px;
+  padding: 0px 22px;
   cursor: pointer;
   transition: 0.3s;
+  text-transform: uppercase;
 }
 .footer .footer__menu form button:hover {
   background: #4C957A;
@@ -429,14 +462,14 @@ html {
   margin-bottom: 15px;
   font-style: normal;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 14px;
   line-height: 24px;
   color: #000000;
 }
 .footer .footer__menu .block-menu a, .footer .footer__menu .block-menu p {
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 14px;
   line-height: 24px;
   color: #000000;
 }
@@ -451,6 +484,12 @@ html {
   width: 131px;
   display: flex;
   justify-content: space-between;
+  position: relative;
+}
+.footer .footer__menu .social > a {
+  position: relative;
+  top: 50%;
+  height: 36px;
 }
 .footer .footer__menu .powered {
   color: #000;
@@ -476,9 +515,14 @@ html {
 }
 
 @media (max-width: 1439px) {
+  .how-it-works .steps-help .step .step__content {
+    min-height: 360px;
+  }
+}
+@media (max-width: 1239px) {
   .how-it-works .steps-help {
     flex-wrap: wrap;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
   }
   .how-it-works .steps-help .step {
@@ -487,6 +531,9 @@ html {
   }
   .how-it-works .steps-help .step:first-child {
     margin-right: 30px;
+  }
+  .how-it-works .steps-help .step .step__content {
+    min-height: 310px;
   }
   .how-it-works .steps-help .step .step__img {
     height: 350px;
@@ -514,7 +561,6 @@ html {
     justify-content: center;
   }
   .how-it-works .steps-help .step {
-    flex-basis: 70%;
     margin-bottom: 20px;
   }
   .how-it-works .steps-help .step .step__img {
@@ -523,8 +569,16 @@ html {
   .how-it-works .steps-help .step .step__img img {
     object-fit: fill;
   }
+  .how-it-works .steps-help .step .step__content {
+    min-height: 360px;
+  }
 }
-@media (min-width: 768px) and (max-width: 1439px) {
+@media (max-width: 850px) {
+  .how-it-works .steps-help .step .step__content {
+    min-height: 403px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1280px) {
   .logo {
     max-width: 105px;
   }
@@ -540,15 +594,13 @@ html {
 
   .header .header__content > div {
     display: flex;
-    flex-direction: column;
     align-items: flex-end;
   }
-  .header .header__content > div .button-sing-in {
-    order: 1;
+  .header .header__content > div .button-sing-in img {
+    max-width: 23px;
   }
   .header .header__content > div .header__navigation {
-    order: 2;
-    margin-right: 0;
+    margin-right: 10px;
   }
 
   .preview .preview__content .preview__title {
@@ -602,7 +654,7 @@ html {
     padding-bottom: 30px;
   }
   .footer .footer__register .input__join {
-    font-size: 16px;
+    font-size: 14px;
     padding: 13px;
     width: 310px;
   }
@@ -614,14 +666,18 @@ html {
     justify-content: space-around;
   }
   .footer .footer__menu .block-menu {
-    flex-basis: 22%;
+    flex-basis: 30%;
     text-align: center;
   }
-  .footer .footer__menu .contact-us, .footer .footer__menu .social {
-    margin-top: 30px;
-  }
   .footer .footer__menu form {
+    margin-left: 0;
     align-items: flex-start;
+    margin-top: 20px;
+  }
+  .footer .footer__menu .social {
+    margin-right: auto;
+    margin-left: 20px;
+    margin-top: 20px;
   }
 
   .footer .footer__menu .powered::after {
@@ -672,8 +728,9 @@ html {
   }
   .header .header__content > div .button-sing-in {
     position: absolute;
-    right: 55%;
-    top: 3%;
+    bottom: 24%;
+    transform: translateX(50%);
+    right: 38%;
   }
   .header .header__content .menu__btn {
     display: block;
@@ -827,9 +884,6 @@ html {
     flex-direction: column;
     align-items: center;
   }
-  .footer .footer__menu .logo {
-    order: 1;
-  }
   .footer .footer__menu .block-menu {
     order: 3;
     text-align: center;
@@ -847,8 +901,18 @@ html {
     align-items: flex-start;
     margin-top: 20px;
   }
+  .footer .footer__menu form h5 {
+    text-align: center;
+  }
+  .footer .footer__menu form > div {
+    text-align: center;
+    top: 0;
+    transform: none;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
   .footer .footer__menu form input {
-    width: 90%;
+    width: 68%;
     padding: 5px;
     font-size: 12px;
   }
