--- a/covid/assets/style/shortSale.css
+++ b/covid/assets/style/shortSale.css
@@ -60,7 +60,7 @@ html {
   position: absolute;
   width: 40px;
   right: 0;
-  height: 4px;
+  height: 2px;
   background-color: #4C957A;
   transition: 0.5s ease-in-out;
 }
@@ -409,9 +409,8 @@ html {
 .how-it-works .step__content {
   background: #fff;
   padding: 45px 30px;
-  border: 2px solid #4C957A;
   position: relative;
-  min-height: 634px;
+  min-height: 635px;
 }
 .how-it-works .step__content .step__title {
   font-weight: bold;
@@ -473,6 +472,21 @@ html {
 .footer {
   padding: 20px 0;
 }
+.footer .logo {
+  max-width: 134px;
+}
+.footer .block-logo {
+  margin-top: 18px;
+  display: flex;
+  flex-direction: column;
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  /* identical to box height */
+  color: #000000;
+}
 .footer .footer__register {
   display: flex;
   justify-content: space-between;
@@ -507,42 +521,60 @@ html {
   padding-top: 34px;
 }
 .footer .footer__menu form {
-  display: flex;
-  align-items: flex-start;
+  position: relative;
+}
+.footer .footer__menu form .join-title {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 17px;
+  color: #000000;
+}
+.footer .footer__menu form > div {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
 .footer .footer__menu form input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   background: rgba(255, 252, 252, 0.7);
   border: 1px solid #000000;
   box-sizing: border-box;
   border-radius: 10px;
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  min-width: 329px;
+  font-size: 14px;
   line-height: 24px;
   padding: 12px 16px;
   color: #585858;
-  min-width: 329px;
 }
 .footer .footer__menu form input::placeholder {
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 14px;
   line-height: 24px;
   color: rgba(88, 88, 88, 0.7);
 }
 .footer .footer__menu form button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   background: #6CD3AE;
   border-radius: 10px;
   border: none;
   font-style: normal;
   font-weight: 500;
-  font-size: 48px;
+  font-size: 14px;
   line-height: 48px;
   color: #FFFFFF;
   margin-left: 7px;
-  padding: 2px 10px;
+  padding: 0px 22px;
   cursor: pointer;
   transition: 0.3s;
+  text-transform: uppercase;
 }
 .footer .footer__menu form button:hover {
   background: #4C957A;
@@ -555,14 +587,14 @@ html {
   margin-bottom: 15px;
   font-style: normal;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 14px;
   line-height: 24px;
   color: #000000;
 }
 .footer .footer__menu .block-menu a, .footer .footer__menu .block-menu p {
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 14px;
   line-height: 24px;
   color: #000000;
 }
@@ -577,6 +609,12 @@ html {
   width: 131px;
   display: flex;
   justify-content: space-between;
+  position: relative;
+}
+.footer .footer__menu .social > a {
+  position: relative;
+  top: 50%;
+  height: 36px;
 }
 .footer .footer__menu .powered {
   color: #000;
@@ -601,9 +639,73 @@ html {
   z-index: -1;
 }
 
-@media (min-width: 768px) and (max-width: 1439px) {
+@media (max-width: 1300px) {
+  .how-it-works .steps-help .step .step__content {
+    min-height: 432px;
+  }
+}
+@media (max-width: 1239px) {
+  .how-it-works .steps-help {
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: center;
+  }
+  .how-it-works .steps-help .step {
+    flex-basis: 45%;
+    margin-bottom: 20px;
+  }
+  .how-it-works .steps-help .step:first-child {
+    margin-right: 30px;
+  }
+  .how-it-works .steps-help .step .step__content {
+    min-height: 355px;
+  }
+  .how-it-works .steps-help .step .step__img {
+    height: 350px;
+  }
+  .how-it-works .steps-help .step .step__img img {
+    object-fit: fill;
+  }
+  .how-it-works .step__content {
+    padding: 30px 10px;
+    min-height: 10px;
+  }
+  .how-it-works .step__content .step__title {
+    font-size: 18px;
+    text-align: center;
+  }
+  .how-it-works .step__content .step__description {
+    font-size: 14px;
+    text-align: center;
+  }
+}
+@media (max-width: 1000px) {
+  .how-it-works .steps-help {
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+  .how-it-works .steps-help .step {
+    margin-bottom: 20px;
+  }
+  .how-it-works .steps-help .step .step__img {
+    height: 350px;
+  }
+  .how-it-works .steps-help .step .step__img img {
+    object-fit: fill;
+  }
+  .how-it-works .steps-help .step .step__content {
+    min-height: 432px;
+  }
+}
+@media (max-width: 850px) {
+  .how-it-works .steps-help .step .step__content {
+    min-height: 455px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1280px) {
   .logo {
-    max-width: 105px;
+    max-width: 80px;
   }
 
   .header .header__navigation .navigation__list .list__link {
@@ -617,17 +719,18 @@ html {
 
   .header .header__content > div {
     display: flex;
-    flex-direction: column;
     align-items: flex-end;
   }
-  .header .header__content > div .button-sing-in {
-    order: 1;
+  .header .header__content > div .button-sing-in img {
+    max-width: 23px;
   }
   .header .header__content > div .header__navigation {
-    order: 2;
-    margin-right: 0;
+    margin-right: 10px;
   }
 
+  .foreclosure-preview {
+    padding-top: 80px;
+  }
   .foreclosure-preview .message {
     margin-top: 10px;
     font-size: 16px;
@@ -680,20 +783,8 @@ html {
   .how-it-works .how-it-works__subtitle {
     margin-bottom: 15px;
   }
-  .how-it-works .steps-help {
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-  }
-  .how-it-works .steps-help .step {
-    flex-basis: 70%;
-    margin-bottom: 20px;
-  }
-  .how-it-works .steps-help .step .step__img {
-    height: 350px;
-  }
-  .how-it-works .steps-help .step .step__img img {
-    object-fit: fill;
+  .how-it-works .step:first-child {
+    margin-right: 0;
   }
   .how-it-works .step__content {
     padding: 30px 10px;
@@ -729,7 +820,7 @@ html {
     padding-bottom: 30px;
   }
   .footer .footer__register .input__join {
-    font-size: 16px;
+    font-size: 14px;
     padding: 13px;
     width: 310px;
   }
@@ -741,14 +832,18 @@ html {
     justify-content: space-around;
   }
   .footer .footer__menu .block-menu {
-    flex-basis: 22%;
+    flex-basis: 30%;
     text-align: center;
   }
-  .footer .footer__menu .contact-us, .footer .footer__menu .social {
-    margin-top: 30px;
-  }
   .footer .footer__menu form {
+    margin-left: 0;
     align-items: flex-start;
+    margin-top: 20px;
+  }
+  .footer .footer__menu .social {
+    margin-right: auto;
+    margin-left: 20px;
+    margin-top: 20px;
   }
 
   .footer .footer__menu .powered::after {
@@ -799,8 +894,9 @@ html {
   }
   .header .header__content > div .button-sing-in {
     position: absolute;
-    right: 55%;
-    top: 3%;
+    bottom: 24%;
+    transform: translateX(50%);
+    right: 38%;
   }
   .header .header__content .menu__btn {
     display: block;
@@ -990,9 +1086,6 @@ html {
     flex-direction: column;
     align-items: center;
   }
-  .footer .footer__menu .logo {
-    order: 1;
-  }
   .footer .footer__menu .block-menu {
     order: 3;
     text-align: center;
@@ -1010,8 +1103,18 @@ html {
     align-items: flex-start;
     margin-top: 20px;
   }
+  .footer .footer__menu form h5 {
+    text-align: center;
+  }
+  .footer .footer__menu form > div {
+    text-align: center;
+    top: 0;
+    transform: none;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
   .footer .footer__menu form input {
-    width: 90%;
+    width: 68%;
     padding: 5px;
     font-size: 12px;
   }
