--- a/covid/assets/style/shortSale.scss
+++ b/covid/assets/style/shortSale.scss
@@ -62,7 +62,7 @@ html {
             position: absolute;
             width: 40px;
             right: 0;
-            height: 4px;
+            height: 2px;
             background-color: #4C957A;
             transition: 0.5s ease-in-out;
         }
@@ -455,9 +455,8 @@ html {
     .step__content {
         background: #fff;
         padding: 45px 30px;
-        border: 2px solid #4C957A;
         position: relative;
-        min-height: 634px;
+        min-height: 635px;
 
         .step__title {
             font-weight: bold;
@@ -475,7 +474,6 @@ html {
         }
     }
 }
-
 .consult {
     padding: 63px 0;
     background: url('../img/consult__bg.png') no-repeat;
@@ -524,6 +522,23 @@ html {
 .footer {
     padding: 20px 0;
 
+    .logo {
+        max-width: 134px;
+    }
+    .block-logo{
+        margin-top: 18px;
+        display: flex;
+        flex-direction: column;
+        text-decoration: none;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 17px;
+        /* identical to box height */
+
+
+color: #000000;
+    }
     .footer__register {
         display: flex;
         justify-content: space-between;
@@ -560,43 +575,63 @@ html {
         padding-top: 34px;
 
         form {
-            display: flex;
-            align-items: flex-start;
+            position: relative;
+            .join-title {
+                font-style: normal;
+                font-weight: bold;
+                font-size: 14px;
+                line-height: 17px;
+
+                color: #000000;
+            }
+
+            & > div {
+                position: relative;
+                top: 50%;
+                transform: translateY(-50%);
+            }
 
             input {
+                -webkit-appearance: none;
+                -moz-appearance: none;
+                appearance: none;
                 background: rgba(255, 252, 252, 0.7);
                 border: 1px solid #000000;
                 box-sizing: border-box;
                 border-radius: 10px;
                 font-style: normal;
                 font-weight: 500;
-                font-size: 20px;
+                min-width: 329px;
+                font-size: 14px;
                 line-height: 24px;
                 padding: 12px 16px;
                 color: rgba(88, 88, 88, 1);
-                min-width: 329px;
                 &::placeholder {
                     font-style: normal;
                     font-weight: 500;
-                    font-size: 20px;
+                    font-size: 14px;
                     line-height: 24px;
                     color: rgba(88, 88, 88, 0.7);
                 }
             }
 
             button {
+                -webkit-appearance: none;
+                -moz-appearance: none;
+                appearance: none;
                 background: #6CD3AE;
                 border-radius: 10px;
                 border: none;
                 font-style: normal;
                 font-weight: 500;
-                font-size: 48px;
+                font-size: 14px;
                 line-height: 48px;
                 color: #FFFFFF;
                 margin-left: 7px;
-                padding: 2px 10px;
+                padding: 0px 22px;
                 cursor: pointer;
-                transition: .3s;;
+                transition: .3s;
+                text-transform: uppercase;
 
                 &:hover {
                     background: #4C957A;
@@ -613,7 +648,7 @@ html {
                 margin-bottom: 15px;
                 font-style: normal;
                 font-weight: bold;
-                font-size: 20px;
+                font-size: 14px;
                 line-height: 24px;
                 color: #000000;
             }
@@ -621,7 +656,7 @@ html {
             a,p {
                 font-style: normal;
                 font-weight: 500;
-                font-size: 20px;
+                font-size: 14px;
                 line-height: 24px;
                 color: #000000;
             }
@@ -640,6 +675,12 @@ html {
             width: 131px;
             display: flex;
             justify-content: space-between;
+            position: relative;
+            & > a {
+                position: relative;
+                top: 50%;
+                height: 36px;
+            }
         }
 
         .powered {
@@ -664,15 +705,117 @@ html {
                 right: 17px;
                 z-index: -1;
             }
+
         }
     }
 }
 
-@media (min-width: 768px) and (max-width: 1439px) { 
+@media (max-width: 1300px) {
+    .how-it-works {
+        .steps-help {
+            .step {
+                .step__content {
+                    min-height: 432px;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 1239px) {
+
+    .how-it-works {
+        .steps-help {
+            flex-wrap: wrap;
+            align-items: flex-start;
+            justify-content: center;
+
+            .step {
+                flex-basis: 45%;
+                margin-bottom: 20px;
+                &:first-child {
+                    margin-right: 30px;
+                }
+
+                .step__content {
+                    min-height: 355px;
+                }
+
+                .step__img{
+                    height: 350px;
+                    img {
+                        object-fit: fill;
+                    }
+                }
+
+            }
+        }
+
+        .step__content {
+            padding: 30px 10px;
+            min-height: 10px;
+
+            .step__title {
+                font-size: 18px;
+                text-align: center;
+            }
+
+            .step__description {
+                font-size: 14px;
+                text-align: center;
+            }
+        
+        }
+    }
+
+}
+
+@media (max-width: 1000px) {
+    .how-it-works {
+        .steps-help {
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: center;
+    
+            .step {
+                
+                margin-bottom: 20px;
+    
+                .step__img{
+                    height: 350px;
+                    img {
+                        object-fit: fill;
+                    }
+                }
+
+                .step__content{
+                    min-height: 432px;
+                }
+    
+            }
+        }
+    }
+    
+}
+
+@media (max-width: 850px){
+    .how-it-works {
+        .steps-help {
+            .step {
+                .step__content {
+                    min-height: 455px;
+                }
+            }
+        }
+    }
+}
+
+
+@media (min-width: 768px) and (max-width: 1280px) { 
 
 
     .logo {
-        max-width: 105px;
+        max-width: 80px;
     }
     .header .header__navigation .navigation__list .list__link {
         font-size: 12px;
@@ -685,20 +828,20 @@ html {
 
     .header .header__content > div {
         display: flex;
-        flex-direction: column;
         align-items: flex-end;
 
-        .button-sing-in {
-            order: 1;
+        .button-sing-in img{
+            max-width: 23px;
         }
 
         .header__navigation{
-            order: 2;
-            margin-right: 0;
+            
+            margin-right: 10px;
         }
     }
 
     .foreclosure-preview {
+         padding-top: 80px;
         .message {
             margin-top: 10px;
             font-size: 16px;
@@ -767,27 +910,11 @@ html {
         .how-it-works__subtitle {
             margin-bottom: 15px;
         }
-
-        .steps-help {
-            flex-wrap: wrap;
-            align-items: center;
-            justify-content: center;
-
-            .step {
-                flex-basis: 70%;
-                margin-bottom: 20px;
-
-                .step__img{
-                    height: 350px;
-                    img {
-                        object-fit: fill;
-                    }
-                }
-
+        .step {
+            &:first-child {
+                margin-right: 0;
             }
         }
-
-
 
         .step__content 
         {
@@ -827,7 +954,7 @@ html {
         .footer__register{
             padding-bottom: 30px;
             .input__join {
-                font-size: 16px;
+                font-size: 14px;
                 padding: 13px;
                 &::placeholder {
                     font-size: 16px;
@@ -841,16 +968,22 @@ html {
             justify-content: space-around;
 
             .block-menu {
-                flex-basis: 22%;
+                flex-basis: 30%;
                 text-align: center;
             }
 
-            .contact-us,.social {
-                margin-top: 30px;
-            }
+            
 
             form {
+                margin-left: 0;
                 align-items: flex-start;
+                margin-top: 20px;
+            }
+
+            .social {
+                margin-right: auto;
+                margin-left: 20px;
+                margin-top: 20px;
             }
         }
     }
@@ -909,9 +1042,9 @@ html {
 
             .button-sing-in {
                 position: absolute;
-
-                right: 55%;
-                top: 3%;
+                bottom: 24%;
+                transform: translateX(50%);
+                right: 38%;
             }
         }
 
@@ -1147,9 +1280,6 @@ html {
         .footer__menu {
             flex-direction: column;
             align-items: center;
-            .logo {
-                order:1;
-            }
             .block-menu {
                 order: 3;
                 text-align: center;
@@ -1169,8 +1299,20 @@ html {
                 width: 90%;
                 align-items: flex-start;
                 margin-top: 20px;
+
+                h5 {
+                    text-align: center;
+                }
+
+                & > div {
+                    text-align: center;
+                    top: 0;
+                    transform: none;
+                    margin-top: 10px;
+                    margin-bottom: 10px;
+                }
                 input {
-                    width: 90%;
+                    width: 68%;
                     padding: 5px;
                     font-size: 12px;
                     &::placeholder {
